# Shocker

./: CMakeLists.txt  LICENSE  README.md  recompile_project.sh  run_example.sh  run_valgrind.sh
clouds/actives/: benchmark_slab_triangle_surface_pmjs.vtk  finsberg_reference_pmjs_CV:2_LV_um.vtk  finsberg_reference_pmjs_CV:2_RV_um.vtk
clouds/endocardium/: benchmark_slab_triangle_surface.vtk  finsberg_endo_with_normals_LV_um.vtk
clouds/inactives/: benchmark_slab_triangle_surface_points.vtk  finsberg_mesh_cloud_LV_um.vtk  finsberg_mesh_cloud_RV_um.vtk
inputs/: benchmark_2d.ini  finsberg_LV.ini  finsberg_RV.ini  simplified_LV.ini  simplified_RV.ini
scripts/: diameter_calibration.py  stimuli_root_nodes.py  vertices.py
scripts/concatenate-network/: CMakeLists.txt
scripts/concatenate-network/src/: main.cpp
scripts/config_file_generator/: .gitignore  canine.py  clear_config_files.sh  finsberg.py  generator.py  sebastian.py  seed_generator.py  seeds_10.txt  seeds_100.txt  seeds_300.txt  seeds_50.txt  seeds_500.txt  seeds_additional_100.txt  seeds_additional_more_100.txt  seeds_sebastian_LV_100.txt  seeds_sebastian_RV_100.txt
scripts/merge-network/: .gitignore  CMakeLists.txt  clean_project.sh  recompile_project.sh
scripts/merge-network/inputs/: simplified_minimum_network_LV_seed:1562072768.vtk  simplified_minimum_network_RV_seed:1562072768.vtk
scripts/merge-network/inputs/reference/: finsberg_root_positions_um.txt  simplified_LV_um.vtk  simplified_RV_um.vtk
scripts/merge-network/src/: main.cpp
scripts/merge-network/src/graph/: CMakeLists.txt  graph.cpp  graph.h  pqueue.cpp
scripts/merge-network/src/reader/: reader.cpp  reader.h
scripts/merge-network/src/utils/: CMakeLists.txt  utils.cpp  utils.h
scripts/pmj-generator/: CMakeLists.txt  run_valgrind.sh
scripts/pmj-generator/src/: main.cpp
scripts/pmj-generator/src/pmj/: CMakeLists.txt  pmj.cpp  pmj.h
scripts/pmj-generator/src/reader/: reader.cpp  reader.h
scripts/pmj-generator/src/utils/: utils.cpp  utils.h
scripts/read-network/: CMakeLists.txt  ToDo
scripts/read-network/inputs/: benchmark_network.vtk  benchmark_root.vtk  test_network_1.vtk  test_network_2.vtk
scripts/read-network/inputs/finsberg/reference/: finsberg_all_root_position_um.txt
scripts/read-network/inputs/finsberg/reference/His/: finsberg_his_um.vtk
scripts/read-network/inputs/finsberg/reference/LV/: finsberg_LV_um.vtk  finsberg_root_position_LV_um.txt
scripts/read-network/inputs/finsberg/reference/LVRV/: finsberg_LVRV_um.vtk  finsberg_root_position_His_um.txt
scripts/read-network/inputs/finsberg/reference/RV/: finsberg_root_position_RV_um.txt
scripts/read-network/src/: main.cpp
scripts/read-network/src/graph/: CMakeLists.txt  constants.h  graph.cpp  graph.h
scripts/read-network/src/network/: CMakeLists.txt  constants.h  point.cpp  point.h  segment.cpp  segment.h
scripts/read-network/src/reader/: CMakeLists.txt  reader.cpp  reader.h
scripts/read-network/src/utils/: utils.cpp  utils.h
src/: main.cpp
src/ini_parser/: CMakeLists.txt  ini_file_sections.h
src/options/: CMakeLists.txt  cloud_config.cpp  cloud_config.h  cost_function_config.cpp  cost_function_config.h  local_optimization_config.cpp  local_optimization_config.h  pmj_config.cpp  pmj_config.h  user_options.cpp  user_options.h
src/shocker/: CMakeLists.txt  constants.h  shocker.cpp  shocker.h
src/shocker/cloud/: cloud.cpp  cloud.h  pmj.cpp  pmj.h  point.cpp  point.h
src/shocker/config/: config.cpp  config.h
src/shocker/cost_function/: cost_function.cpp  cost_function.h
src/shocker/error/: error.cpp  error.h
src/shocker/graph/: graph.cpp  graph.h
src/shocker/kdtree/: CMakeLists.txt
src/shocker/local_optimization/: local_optimization.cpp  local_optimization.h
src/shocker/logger/: logger.cpp  logger.h
src/shocker/network/: CMakeLists.txt  node.cpp  node.h  segment.cpp  segment.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
