cmake_minimum_required(VERSION 3.0.1)
project(PMJGenerator)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_SUBDIRECTORY(src/reader)
ADD_SUBDIRECTORY(src/pmj)
ADD_SUBDIRECTORY(src/utils)

ADD_EXECUTABLE(PMJGenerator src/main.cpp)

ADD_DEPENDENCIES(PMJGenerator reader pmj utils)

TARGET_LINK_LIBRARIES(PMJGenerator ${VTK_LIBRARIES} reader pmj utils dl m)
